welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: illegal start of simple pattern
var case:Int=0
    ^RunHalf:23: error: '=' expected but '}' found.
}
^