welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var case:Int=0
var Biscuit:Int=0
while (!2*Biscuit=case+1) {
	avance() 
	if (caseOrange) {
		case=case+1
		if (estSurBiscuit) {
			Biscuit=Biscuit+1
		}
	}
}









}
